# spi-slave

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  spi_dma.c  spi_irq.c
